Solve Card img alignment - close #15

--- a/assets/style_dark.css
+++ b/assets/style_dark.css
@@ -7,6 +7,12 @@
   #navbar{
     width: 100%;
   }
+  #post_img_link{
+    padding-left: 20px;
+  }
+  #post_img_link img{
+    height: 150px;
+  }
   #post_content{
     width: auto;
     padding-left: 30px;
@@ -56,6 +62,10 @@ height: 0;
   text-align: center;
   margin-top: 20px;
   margin-right: 30px;
+}
+#post_img_link img{
+  width: 300px;
+  height: 130px;
 }
 #post_title{
   text-align: left;
